#
# Copyright (c) 2004-2006 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2006-2020 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010      Oracle and/or its affiliates.  All rights
#                         reserved.
# Copyright (c) 2014-2019 Intel, Inc.  All rights reserved.
# Copyright (c) 2016      Research Organization for Information Science
#                         and Technology (RIST). All rights reserved.
# Copyright (c) 2021-2022 Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

EXTRA_DIST = \
        distscript.sh \
        prte_get_version.m4sh \
        prte_get_version.sh \
        ltmain_nag_pthread.diff \
        ltmain_pgi_tp.diff \
        prte_mca_priority_sort.pl \
        find_common_syms \
        getdate.sh \
        from-savannah/upstream-config.guess \
        from-savannah/upstream-config.sub \
	c_weak_symbols.m4 \
	pkg.m4 \
	prte_case_sensitive_fs_setup.m4 \
	prte_check_alps.m4 \
	prte_check_attributes.m4 \
	prte_check_cflags.m4 \
	prte_check_compiler_version.m4 \
	prte_check_compiler_works.m4 \
	prte_check_ident.m4 \
	prte_check_libnl.m4 \
	prte_check_lock.m4 \
	prte_check_lsf.m4 \
	prte_check_moab.m4 \
	prte_check_offsetof.m4 \
	prte_check_os_flavors.m4 \
	prte_check_package.m4 \
	prte_check_ps.m4 \
	prte_check_pthread_pids.m4 \
	prte_check_ptrace.m4 \
	prte_check_sge.m4 \
	prte_check_singularity.m4 \
	prte_check_slurm.m4 \
	prte_check_tm.m4 \
	prte_check_vendor.m4 \
	prte_check_version.m4 \
	prte_check_visibility.m4 \
	prte_check_withdir.m4 \
	prte_config_asm.m4 \
	prte_config_files.m4 \
	prte_config_pthreads.m4 \
	prte_config_subdir.m4 \
	prte_config_subdir_args.m4 \
	prte_config_threads.m4 \
	prte_configure_options.m4 \
	prte_ensure_contains_optflags.m4 \
	prte_find_type.m4 \
	prte_functions.m4 \
	prte_get_version.m4 \
	prte_load_platform.m4 \
	prte_mca.m4 \
	prte_save_version.m4 \
	prte_search_libs.m4 \
	prte_set_mca_prefix.m4 \
	prte_setup_cc.m4 \
	prte_setup_cli.m4 \
	prte_setup_component_package.m4 \
	prte_setup_hwloc.m4 \
	prte_setup_libev.m4 \
	prte_setup_libevent.m4 \
	prte_setup_pmix.m4 \
	prte_strip_optflags.m4 \
	prte_summary.m4 \
	prte_try_assemble.m4
