#
# Copyright (c) 2004-2010 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2009 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2009-2017 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010      IBM Corporation.  All rights reserved.
# Copyright (c) 2010-2011 Oak Ridge National Labs.  All rights reserved.
# Copyright (c) 2013-2018 Los Alamos National Security, Inc.  All rights
#                         reserved.
# Copyright (c) 2013-2019 Intel, Inc.  All rights reserved.
# Copyright (c) 2017      Amazon.com, Inc. or its affiliates.
#                         All Rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

amca_paramdir = $(AMCA_PARAM_SETS_DIR)
dist_amca_param_DATA = amca-param-sets/example.conf

EXTRA_DIST = \
        make_manpage.pl \
	dist/make_dist_tarball \
	dist/make-authors.pl \
	dist/linux/prte.spec \
	platform/optimized \
	platform/intel/bend/linux \
	platform/intel/bend/linux.conf \
	platform/intel/bend/mac-optimized \
	platform/intel/bend/mac-optimized.conf \
	platform/intel/bend/linux-optimized \
	platform/intel/bend/linux-optimized.conf

dist_prrtedata_DATA = openmpi-valgrind.supp
